[package]
name = "my_harfbuzz_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_harfbuzz_ffi"
# "cdylib" or "staticlib" can be used if you wanted to build with Cargo alone.
# But Meson uses rust_abi = 'c' which takes precedence. So only rlib is needed.
crate-type = ["rlib"]

[dependencies]
# If you plan on reading actual TTF/OTF data:
# read-fonts = "0.20"
# skrifa = "0.20"
# font-types = { version = "0.6", features = ["bytemuck"] }
libc = "0.2"

